Fix page formatting and minor javascript issue - fix == instead of === - fix header margin - fix scroll bar causing horizontal page jumping when it appears/disappears by always showing scroll bar

--- a/httpGUI/style.css
+++ b/httpGUI/style.css
@@ -86,3 +86,7 @@ they have zero height. This forces the height to some valid value*/
     line-height: 16px;
     margin-bottom: 0;
 }
+
+body {
+    overflow-y: scroll;
+}
